--- a/Projet/src/main/webapp/WEB-INF/web.xml
+++ b/Projet/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>LoginController</servlet-name>
-        <servlet-class>controllers.LoginController</servlet-class>
+        <servlet-name>ControleLogin</servlet-name>
+        <servlet-class>controllers.ControleLogin</servlet-class>
         <!-- Les identifiants de l'administrateur pour se connecter -->
         <init-param>
             <param-name>login</param-name>
@@ -15,8 +15,8 @@
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>LoginController</servlet-name>
-        <url-pattern>/LoginController</url-pattern>
+        <servlet-name>ControleLogin</servlet-name>
+        <url-pattern>/ControleLogin</url-pattern>
     </servlet-mapping>
     
     <!-- Contrôle le temps au bout duquel une session inactive est détruite automatiquement -->
@@ -28,6 +28,6 @@
     </session-config>
     
     <welcome-file-list>
-        <welcome-file>LoginController</welcome-file>
+        <welcome-file>ControleLogin</welcome-file>
     </welcome-file-list>
 </web-app>
