--- a/Projet/src/main/webapp/WEB-INF/web.xml
+++ b/Projet/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,9 @@
     
     <!-- Contrôle le temps au bout duquel une session inactive est détruite automatiquement -->
     <session-config>
-        <!-- Un temps volontairement court : 1 minute -->
+        <!-- Un temps volontairement court : 5 minutes -->
         <session-timeout>
-            1
+            5
         </session-timeout>
     </session-config>
     
